--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "electron": "^1.3.4"
   },
   "dependencies": {
+    "network": "^0.3.0",
     "node-notifier": "^4.6.1",
-    "request": "^2.76.0"
+    "request": "^2.76.0",
+    "wifi-name": "^3.0.0"
   }
 }
