--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron": "^1.3.4"
   },
   "dependencies": {
+    "electron-json-storage": "^2.0.3",
     "network": "^0.3.0",
     "node-notifier": "^4.6.1",
     "request": "^2.76.0",
